--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,93 +11,358 @@ header {
     height: 100vh;
     font-family: 'Open Sans', sans-serif;
 }
-header .f_nav {
+.black_wrap {
     position: relative;
-    padding: 20px 0;
+    width: 100%;
+    height: auto;
 }
-header .f_nav_before:before {
+.black_wrap:before {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    height: 100px;
-    background: rgba(0, 0, 0, 0.3);
+    background: #333;
+    opacity: 0.6;
 }
-.f_nav .logo img {
-    width: 100%;
-    max-width: 300px;
+.r_icon {
+    position: relative;
 }
-header .social_nav ul {
-    margin-top: 10px;
+.r_icon .social_icon,
+.r_icon .login {
+    padding-top: 10px;
+    display: inline-flex;
 }
-header .social_nav ul li {
+.r_icon .social_icon ul li {
     display: inline-block;
     margin-right: 10px;
 }
-header .social_nav ul li a {
-    font-size: 24px;
+.r_icon .social_icon ul li i {
     color: #fff;
-    transition: 0.3s;
+    font-size: 20px;
 }
-header .social_nav ul li a:hover {
-    color: #963939;
-}
-header .social_nav ul li form button {
-    position: relative;
-    top: -1px;
-    border: 0;
+.r_icon .login .login_btn {
+    background: #d60000;
+    padding: 3px 10px;
     border-radius: 3px;
-    padding: 8px 10px;
-    background: #d60000;
-    color: #fff;
-    letter-spacing: 1px;
-    z-index: 2;
-    -webkit-box-shadow: 0px 3px 2px 0px rgba(87,0,0,1);
-    -moz-box-shadow: 0px 3px 2px 0px rgba(87,0,0,1);
-    box-shadow: 0px 3px 2px 0px rgba(87,0,0,1);
 }
-header .social_nav ul li form button:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 0;
-    z-index: -1;
-    background: #963939;
-    transition: 0.3s;
-}
-header .social_nav ul li form button:hover:before {
-    height: 100%;
-}
-header .main_nav {
-    position: relative;
-    margin-top: 80px;
-}
-.navbar-default {
-    background: #d60000;
-    border-color: transparent!important;
-    -webkit-box-shadow: 0px 3px 2px 0px rgba(87,0,0,1);
-    -moz-box-shadow: 0px 3px 2px 0px rgba(87,0,0,1);
-    box-shadow: 0px 3px 2px 0px rgba(87,0,0,1);
-}
-.navbar-default .navbar-nav>li>a {
+.r_icon .login .login_btn a {
     color: #fff;
     font-size: 18px;
-    font-family: 'Open Sans', sans-serif;
 }
-.navbar-nav {
-    float: none!important;
-    text-align: center;
+.logo{
+    position: relative;
+    z-index: 123;
+    float: left;
+    width: 100%;
+    max-width: 300px;
 }
-.nav>li {
-    float: none!important;
-    display: inline-block;
-    margin-right: 40px;
+
+.logo a img{
+    width: 100%;
+    height: auto;
 }
+
+#cssmenu, #cssmenu ul, #cssmenu ul li, #cssmenu ul li a,
+#cssmenu .head-mobile{
+    border: 0;
+    list-style: none;
+    line-height: 1;
+    display: block;
+    position: relative;
+    box-sizing: border-box;
+}
+
+#cssmenu:after, #cssmenu>ul:after{
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
+}
+
+#cssmenu .head-mobile{
+    display: none;
+}
+#cssmenu > ul {
+    margin-bottom: 0!important;
+    float: right;
+    margin-top: 10px;
+}
+
+#cssmenu > ul > li {
+    float: left;
+}
+
+#cssmenu > ul > li > a {
+    padding: 17px;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-decoration: none;
+    color: #ddd;
+    font-weight: 700;
+}
+
+
+#cssmenu > ul > li:hover > a,
+#cssmenu ul li.active a {
+    color: white;
+}
+
+#cssmenu>ul>li.has-sub>a{
+    padding-right: 30px;
+}
+#cssmenu>ul>li.has-sub>a:after{
+    position: absolute;
+    top: 22px;
+    right: 11px;
+    width: 8px;
+    height: 2px;
+    display: block;
+    background: #ddd;
+    content: '';
+}
+
+
+#cssmenu>ul>li.has-sub>a:before{
+    position: absolute;
+    top: 19px;
+    right: 14px;
+    display: block;
+    width: 2px;
+    height: 8px;
+    background: #ddd;
+    content: '';
+    transition: all 0.2s ease;
+}
+
+#cssmenu>ul>li.has-sub:hover>a:before{
+    top: 23px;
+    height: 0;
+}
+
+
+#cssmenu ul ul{
+    position: absolute;
+    left: -9999px;
+}
+
+
+
+#cssmenu ul ul li{
+    height: 0;
+    background: #333;
+    transition: all 0.2s ease;
+}
+
+#cssmenu li:hover>ul{
+    z-index: 11;
+    left: auto;
+}
+#cssmenu li:hover>ul>li{
+    height: 35px;
+}
+
+#cssmenu ul ul ul{
+    margin-left: 100%;
+    top:0;
+}
+
+#cssmenu ul ul li a{
+    border-bottom: 1px solid rgba(150,150,150,0.15);
+    padding: 11px 15px;
+    width: 170px;
+    font-size: 12px;
+    text-decoration: none;
+    color: #ddd;
+    font-weight: 400;
+}
+
+@media screen and (max-width:1000px) {
+  nav {
+    width: 100%;
+  }
+  #cssmenu {
+    width: 100%
+  }
+  #cssmenu ul {
+    width: 100%;
+    display: none
+  }
+  #cssmenu ul li {
+    width: 100%;
+    border-top: 1px solid #444
+  }
+  #cssmenu ul li:hover {
+    background: #363636;
+  }
+  #cssmenu ul ul li, #cssmenu li:hover>ul>li {
+    height: auto
+  }
+  #cssmenu ul li a, #cssmenu ul ul li a {
+    width: 100%;
+    border-bottom: 0
+  }
+  #cssmenu>ul>li {
+    float: none
+  }
+  #cssmenu ul ul li a {
+    padding-left: 25px
+  }
+  #cssmenu ul ul li {
+    background: #333 !important;
+  }
+  #cssmenu ul ul li:hover {
+    background: #363636 !important
+  }
+  #cssmenu ul ul ul li a {
+    padding-left: 35px
+  }
+  #cssmenu ul ul li a {
+    color: #ddd;
+    background: none
+  }
+  #cssmenu ul ul li:hover>a, #cssmenu ul ul li.active>a {
+    color: #fff
+  }
+  #cssmenu ul ul, #cssmenu ul ul ul {
+    position: relative;
+    left: 0;
+    width: 100%;
+    margin: 0;
+    text-align: left
+  }
+  #cssmenu>ul>li.has-sub>a:after, #cssmenu>ul>li.has-sub>a:before, #cssmenu ul ul>li.has-sub>a:after, #cssmenu ul ul>li.has-sub>a:before {
+    display: none
+  }
+  #cssmenu .head-mobile {
+    display: block;
+    padding: 23px;
+    color: #ddd;
+    font-size: 12px;
+    font-weight: 700
+  }
+  .button {
+    width: 55px;
+    height: 46px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    cursor: pointer;
+    z-index: 12399994;
+  }
+  .button:after {
+    position: absolute;
+    top: 23px;
+    right: 20px;
+    display: block;
+    height: 9px;
+    width: 30px;
+    border-top: 2px solid #dddddd;
+    border-bottom: 2px solid #dddddd;
+    content: ''
+  }
+  .button:before {
+    -webkit-transition: all .3s ease;
+    -ms-transition: all .3s ease;
+    transition: all .3s ease;
+    position: absolute;
+    top: 16px;
+    right: 20px;
+    display: block;
+    height: 2px;
+    width: 30px;
+    background: #ddd;
+    content: ''
+  }
+  .button.menu-opened:after {
+    -webkit-transition: all .3s ease;
+    -ms-transition: all .3s ease;
+    transition: all .3s ease;
+    top: 23px;
+    border: 0;
+    height: 2px;
+    width: 19px;
+    background: #fff;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg)
+  }
+  .button.menu-opened:before {
+    top: 23px;
+    background: #fff;
+    width: 19px;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg)
+  }
+  #cssmenu .submenu-button {
+    position: absolute;
+    z-index: 99;
+    right: 0;
+    top: 0;
+    display: block;
+    border-left: 1px solid #444;
+    height: 46px;
+    width: 46px;
+    cursor: pointer
+  }
+  #cssmenu .submenu-button.submenu-opened {
+    background: #262626
+  }
+  #cssmenu ul ul .submenu-button {
+    height: 34px;
+    width: 34px
+  }
+  #cssmenu .submenu-button:after {
+    position: absolute;
+    top: 22px;
+    right: 19px;
+    width: 8px;
+    height: 2px;
+    display: block;
+    background: #ddd;
+    content: ''
+  }
+  #cssmenu ul ul .submenu-button:after {
+    top: 15px;
+    right: 13px
+  }
+  #cssmenu .submenu-button.submenu-opened:after {
+    background: #fff
+  }
+  #cssmenu .submenu-button:before {
+    position: absolute;
+    top: 19px;
+    right: 22px;
+    display: block;
+    width: 2px;
+    height: 8px;
+    background: #ddd;
+    content: ''
+  }
+  #cssmenu ul ul .submenu-button:before {
+    top: 12px;
+    right: 16px
+  }
+  #cssmenu .submenu-button.submenu-opened:before {
+    display: none
+  }
+  #cssmenu ul ul ul li.active a {
+    border-left: none
+  }
+  #cssmenu>ul>li.has-sub>ul>li.active>a, #cssmenu>ul ul>li.has-sub>ul>li.active>a {
+    border-top: none
+  }
+}
+
 .h_title {
     position: relative;
     max-width: 600px;
@@ -308,7 +573,7 @@ header .main_nav {
 }
 #trending_topics .just_for_gamers  .image_l img,
 #trending_topics .just_for_gamers  .image_r img,
-#trending_topics .just_for_gamers .image_b img { 
+#trending_topics .just_for_gamers .image_b img {
     width: 100%;
     max-width: 450px;
     position: relative;
@@ -337,14 +602,40 @@ header .main_nav {
     font-size: 20px;
     padding-top: 20px;
 }
-
+.explore_our_merch .carousel-indicators {
+    bottom: -30px!important;
+}
+.explore_our_merch .carousel-control.left,
+.explore_our_merch .carousel-control.right {
+    background: #ff0000;
+    opacity: 1;
+    border-radius: 5px;
+}
+.explore_our_merch .carousel-control {
+    top: 35%;
+    width: 5%;
+    font-size: 40px;
+    line-height: 65px;
+    bottom: inherit;
+}
+.explore_our_merch .carousel-indicators li {
+    width: 14px;
+    height: 14px;
+    background: #292929;
+    border: none;
+}
+.explore_our_merch .carousel-indicators .active {
+    width: 15px!important;
+    height: 15px!important;
+    background: #ff0000!important;
+}
 /*Login page*/
 #login {
     background: #000;
     height: auto;
     padding: 20px 0;
 }
-                        
+
 #login_form {
     position: relative;
     background: url('../img/login_bg.jpg') no-repeat center center;
@@ -368,7 +659,8 @@ header .main_nav {
     display: block;
     margin: 0 auto;
     text-align: center;
-    padding: 30px 0 0;
+    padding: 15px 0 0;
+    height: 550px;
 }
 #login_form .gamer_connect h3 {
     color: #000;
@@ -492,12 +784,11 @@ header .main_nav {
     border-radius: 5px;
 }
 #login_form .register {
-    position: relative;
     width: 100%;
     height: auto;
     padding: 20px 0;
     background: #b3b3b3;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 #login_form .register a {
     position: relative;
@@ -529,6 +820,24 @@ header .main_nav {
 #login_form .register a:hover:before {
     height: 100%;
 }
+#login_form #register_panel {
+    display: none;
+    position: absolute;
+    top: 20px;
+}
+#login_form #register_panel input {
+    width: 100%;
+    max-width: 700px;
+    height: 50px;
+    background: #dadada;
+    border: 2px solid #9f9f9f;
+    border-radius: 5px;
+    padding-left: 20px;
+    margin: 5px auto;
+}
+#login_form #register_panel input[type="submit"] {
+    background: #c70000;
+}
 /*End login page*/
 
 
@@ -538,4 +847,21 @@ footer {
     background: #000;
     color: #fff;
     padding: 30px 0;
+}
+footer h2 {
+    text-transform: uppercase;
+    color: #c70000;
+    font-size: 25px;
+}
+footer p {
+    line-height: 22px;
+}
+footer .all_rights {
+    margin-top: 10px;
+    border-top: 1px solid #2d2d2d;
+}
+footer .all_rights p {
+    color: #2d2d2d;
+    margin-top: 20px;
+    font-size: 18px;
 }
