--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -441,7 +441,7 @@ header {
     z-index: 111;
     border-radius: 5px;
     overflow: hidden;
-    top: 320px;
+    top: 200px;
 }
 .carousel {
     position: static;
@@ -569,7 +569,7 @@ header {
     font-size: 40px;
     font-weight: bold;
     color: #fff;
-    margin: 100px 0;
+    margin: 150px 0 50px;
 }
 #trending_topics h2.text-center:before,
 .gallery h2:before {
@@ -583,6 +583,9 @@ header {
     background: #ff8945;
     margin: 0 auto;
     display: block;
+}
+#trending_topics .row:last-child {
+    margin-top: 50px;
 }
 #trending_topics a {
     display: inline-block;
@@ -637,7 +640,10 @@ header {
 }
 #trending_topics .just_for_gamers {
     position: relative;
-    padding: 150px 0;
+    padding: 100px 0 0;
+}
+#trending_topics .just_for_gamers h2 {
+    margin: 50px 0 0;
 }
 #trending_topics .just_for_gamers .black_bg {
     position: relative;
@@ -1153,6 +1159,16 @@ footer .all_rights p {
     width: 100%;
     height: 400px;
 }
+#news .top_news a article i {
+    position: absolute;
+    top: 20px;
+    right: 10px;
+    font-size: 20px;
+    color: #fff;
+}
+.like {
+    color: red!important;
+}
 #news .top_news a article img {
     display: block;
     width: 100%;
@@ -1199,6 +1215,7 @@ footer .all_rights p {
     margin: 30px 0;
 }
 #news .black_bg .see_more a {
+    position: relative;
     display: inline-block;
     background: #c70000;
     color: #fff;
@@ -1206,6 +1223,22 @@ footer .all_rights p {
     padding: 10px 50px;
     border-radius: 3px;
     font-size: 18px;
+    z-index: 1;
+}
+#news .black_bg .see_more a:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 0;
+    height: 100%;
+    background: #870505;
+    z-index: -1;
+    transition: 0.3s;
+}
+#news .black_bg .see_more a:hover:before {
+    width: 100%;
 }
 .pagination > li > a {
     border: none;
