--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -54,13 +54,14 @@ header {
 }
 .search_bar input {
     position: absolute;
-    bottom: -60px;
-    right: 90px;
+    bottom: -100px;
+    right: 0;
     width: 300px;
     height: 40px;
-    border-radius: 3px;
+    border-radius: 5px;
     border: 0;
     padding-left: 10px;
+    background: #fff;
     display: none;
 }
 .login .login_btn {
@@ -569,7 +570,7 @@ header {
     font-size: 40px;
     font-weight: bold;
     color: #fff;
-    margin: 150px 0 50px;
+    margin: 50px 0 50px;
 }
 #trending_topics h2.text-center:before,
 .gallery h2:before {
@@ -697,34 +698,7 @@ header {
     font-size: 20px;
     padding-top: 20px;
 }
-.explore_our_merch .carousel-indicators {
-    bottom: -30px!important;
-}
-.explore_our_merch .carousel-control.left,
-.explore_our_merch .carousel-control.right {
-    background: #ff0000;
-    opacity: 1;
-    border-radius: 5px;
-}
-.explore_our_merch .carousel-control {
-    top: 35%;
-    width: 4%;
-    font-size: 40px;
-    line-height: 35px;
-    bottom: inherit;
-    height: 40px;
-}
-.explore_our_merch .carousel-indicators li {
-    width: 14px;
-    height: 14px;
-    background: #292929;
-    border: none;
-}
-.explore_our_merch .carousel-indicators .active {
-    width: 15px!important;
-    height: 15px!important;
-    background: #ff0000!important;
-}
+
 /*Login page*/
 #login {
     background: #000;
@@ -979,7 +953,8 @@ header {
 
 /*Contacts page*/
 #contact {
-    background: linear-gradient(0deg, rgba(255,81,80,1) 0%, rgba(255,144,68,1) 100%);
+    /* background: linear-gradient(0deg, rgba(255,81,80,1) 0%, rgba(255,144,68,1) 100%); */
+    background: url('../img/trending_topics.jpg') no-repeat center center;
 }
 #contact .contacts_page {
     position: relative;
@@ -1089,6 +1064,7 @@ header {
 }
 #faq .faq_collapse .panel-title > a {
     font-size: 22px;
+    display: block;
 }
 #faq .faq_collapse .panel-title a > i {
     float: right;
@@ -1447,7 +1423,7 @@ header#profile .right img {
 header#profile .logout_profile {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 200px;
 }
 header#profile .logout_profile ul.profile_menu {
     position: relative;
@@ -1455,12 +1431,13 @@ header#profile .logout_profile ul.profile_menu {
 }
 header#profile .logout_profile ul.profile_menu {
     position: absolute;
-    top: 0;
+    top: -350px;
     right: 0;
-    left: 150px;
+    left: 100px;
     z-index: 999;
     background: #484848;
-    width: 150px;
+    width: 200px;
+    padding: 10px 20px;
     height: auto;
     border-radius: 5px;
     transition: 0.3s;
@@ -1471,7 +1448,10 @@ header#profile .logout_profile ul li{
     margin-bottom: 30px;
 }
 header#profile .show_profile_navigation {
-    left: 0!important;
+    top: 50px!important;
+}
+header#profile .show_profile_navigation > li > a {
+    border: 0!important;
 }
 header#profile .show_profile_navigation span {
     text-align: center;
