--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -561,7 +561,7 @@ header {
     background-size: cover;
     width: 100%;
     height: auto;
-    padding: 150px 0 50px;
+    padding: 100px 0;
 }
 #trending_topics h2.text-center,
 .gallery h2 {
@@ -641,7 +641,6 @@ header {
 }
 #trending_topics .just_for_gamers {
     position: relative;
-    padding: 100px 0 0;
 }
 #trending_topics .just_for_gamers h2 {
     margin: 50px 0 0;
@@ -1109,23 +1108,51 @@ footer {
     z-index: 996;
 }
 footer h2 {
+    position: relative;
     text-transform: uppercase;
     color: #c70000;
     font-size: 25px;
+    display: inline-block;
+    margin-bottom: 10px;
 }
-footer p {
-    line-height: 22px;
+footer h2:before {
+    content: '';
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 1px;
+    background: #fff;
+    margin: 0 auto;
+}
+footer ul li a {
+    color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    transition: 0.3s;
+}
+footer ul li a:hover {
+    color: #c70000;
 }
 footer .all_rights {
     margin-top: 10px;
     border-top: 1px solid #2d2d2d;
 }
 footer .all_rights p {
-    color: #2d2d2d;
+    color: #bbb;
     margin-top: 20px;
     font-size: 18px;
 }
-
+footer .footer_social_link ul li {
+    display: inline-block;
+}
+footer .footer_social_link ul li a > img {
+    width: 100%;
+    max-width: 40px;
+    height: auto;
+    display: block;
+}
 
 
 
