--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -561,7 +561,7 @@ header {
     background-size: cover;
     width: 100%;
     height: auto;
-    padding: 100px 0;
+    padding: 100px 0 0;
 }
 #trending_topics h2.text-center,
 .gallery h2 {
@@ -588,8 +588,9 @@ header {
 #trending_topics .row:last-child {
     margin-top: 50px;
 }
-#trending_topics a {
+#trending_topics .welcome_shop a {
     display: inline-block;
+    margin: 50px 0;
 }
 #trending_topics article {
     position: relative;
@@ -697,7 +698,39 @@ header {
     font-size: 20px;
     padding-top: 20px;
 }
-
+#trending_topics .go_shop a {
+    position: relative;
+    color: #fff;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 25px;
+    border-radius: 3px;
+    letter-spacing: 1px;
+    padding: 10px 40px;
+    z-index: 2;
+    background: linear-gradient(0deg, rgba(255,81,80,1) 0%, rgba(255,144,68,1) 100%);
+    transition: 0.3s;
+}
+#trending_topics .go_shop a:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 0;
+    height: 0;
+    transform: translate(-50%,-50%);
+    background: #fff;
+    opacity: 0.4;
+    z-index: -1;
+    transition: 0.5s;
+}
+#trending_topics .go_shop a:hover:before {
+    width: 100%;
+    height: 100%;
+}
+#trending_topics .go_shop a:hover {
+    color: #000;
+}
 /*Login page*/
 #login {
     background: #000;
@@ -1144,8 +1177,12 @@ footer .all_rights p {
     margin-top: 20px;
     font-size: 18px;
 }
+footer .footer_social_link ul {
+    margin-top: 10px;
+}
 footer .footer_social_link ul li {
     display: inline-block;
+    margin-right: 5px;
 }
 footer .footer_social_link ul li a > img {
     width: 100%;
@@ -1348,13 +1385,6 @@ footer .footer_social_link ul li a > img {
     font-size: 30px;
     text-align: center;
 }
-.nav-tabs>li.active>a {
-    background: #b40006;
-}
-#games_intro .nav-tabs>li> a:hover,
-.nav-tabs>li.active>a:focus {
-    background: transparent;
-}
 #games_intro .overview_content,
 #games_intro .abilities {
     position: relative;
@@ -1447,33 +1477,7 @@ header#profile .right img {
     margin-right: 10px;
     cursor: pointer;
 }
-header#profile .logout_profile {
-    position: absolute;
-    top: 0;
-    right: 200px;
-}
-header#profile .logout_profile ul.profile_menu {
-    position: relative;
-    left: 0;
-}
-header#profile .logout_profile ul.profile_menu {
-    position: absolute;
-    top: -350px;
-    right: 0;
-    left: 100px;
-    z-index: 999;
-    background: #484848;
-    width: 200px;
-    padding: 10px 20px;
-    height: auto;
-    border-radius: 5px;
-    transition: 0.3s;
-}
-header#profile .logout_profile ul li{
-    display: block;
-    margin-top: 0;
-    margin-bottom: 30px;
-}
+
 header#profile .show_profile_navigation {
     top: 50px!important;
 }
@@ -1491,15 +1495,40 @@ header#profile .show_profile_navigation span {
 }
 #profile_view {
     position: relative;
-    margin-top: 85px;
+}
+
+#profile_user {
+    background: #424242;
+    padding: 15px 0;
+}
+#profile_user .social_login {
+    position: relative;
+    left: -40px;
+}
+#profile_user .social_login ul li {
+    display: inline-block;
+    margin-right: 5px;
+}
+#profile_user .social_login img {
+    display: block;
+    width: 40px;
+    height: auto;
+}
+#profile_user .login_logo a img {
+    display: block;
+    width: 100%;
+    height: auto;
+    max-width: 200px;
+    margin-left: 30px;
 }
 #profile_view .gray_side {
     position: relative;
     padding: 30px;
-    width: 100%;
-    height: 760px;
+    height: 740px;
     z-index: 1;
+    width: 317px;
 }
+
 #profile_view .gray_side:before {
     content: '';
     position: absolute;
@@ -1521,3 +1550,306 @@ header#profile .show_profile_navigation span {
     font-size: 18px;
 }
 /*End Profile*/
+
+/* Ranking */
+.ranked h2 {
+	color: #fff;
+	margin: 0;
+	font-family: 'Montserrat', sans-serif;
+}
+.ranked i {
+	color: #fff;
+	margin: 10px 0;
+	font-size: 40px;
+}
+.ranked button {
+	position: relative;
+    float: none;
+    display: block;
+    margin: 0 auto;
+    border: 1px solid transparent;
+    background: linear-gradient(0deg, rgba(255,81,80,1) 0%, rgba(255,144,68,1) 100%);
+    padding: 15px;
+    font-weight: normal;
+    border-radius: 5px;
+    font-family: 'Montserrat', sans-serif;
+    color: #fff!important;
+	opacity: 1!important;
+	transition: 0.5s!important;
+}
+.ranked button:hover {
+	background: #2b2a29;
+	border: 1px solid #fff;
+}
+.leaderboard-results {
+  text-align:left;
+  border-collapse: collapse;
+}
+.leaderboard-results thead th {
+  padding: 25px;
+  color:#fff;
+  font-size:14px;
+  font-weight:bold;
+  font-family: 'Montserrat', sans-serif;
+  background: #1a1a1a;
+  border-bottom: 5px solid #777;
+}
+.fa-arrow-down {
+  color: red;
+  font-size: 20px;
+}
+.fa-arrow-up {
+  color: green;
+  font-size: 20px;
+}
+.leaderboard-results tbody td {
+  padding:15px 25px;
+  background:#1a1a1a;
+  font-size:16px;
+  border-bottom:5px solid #777;
+  color: #fff;
+  font-family: 'Montserrat', sans-serif;
+}
+.leaderboard-results tbody td:nth-of-type(7) {
+  font-weight:bold;
+}
+.leaderboard-results tbody tr:hover td {
+    background:#1d1d1d;
+}
+.leaderboard-results tbody tr {
+  color:#747474;
+}
+.leaderboard-results tbody tr:first-child {
+  color:#686EF9;
+}
+.leaderboard-results tbody span {
+  font-weight:bold;
+  padding:10px 15px;
+  border-radius:50%;
+}
+.leaderboard-results tbody tr:first-child span {
+  background:#5055CB;
+  color:white;
+}
+.leaderboard-results tbody tr span {
+  background:#262626;
+  color:#747474;
+}
+#rank {
+    position: relative;
+    margin: 50px;
+}
+#rank h2 {
+  position: relative;
+  font-size: 40px;
+  margin: 120px 0 50px;
+}
+#rank h2:before {
+  content: '';
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  right: 0;
+  width: 80px;
+  height: 3px;
+  margin: 0 auto;
+  background: #ff8744;
+}
+.board{
+  width: 100%;
+	margin: 0 auto 50px;
+}
+.board .nav-tabs {
+    position: relative;
+    margin-bottom: 0;
+    box-sizing: border-box;
+    background: #1a1a1a;
+    display: flex;
+    justify-content: space-around;
+}
+.nav-tabs {
+    border-bottom: 0;
+}
+.board .nav-tabs li img {
+	width: 100%;
+  padding: 15px;
+}
+
+p.narrow{
+    width: 60%;
+    margin: 10px auto;
+}
+
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+    color: #555555;
+    cursor: default;
+    border: 0;
+    border-bottom-color: transparent;
+}
+
+span.round-tabs{
+    width: 70px;
+    height: 70px;
+    line-height: 70px;
+    display: inline-block;
+    border-radius: 100px;
+    background: white;
+    z-index: 2;
+    position: absolute;
+    left: 0;
+    text-align: center;
+    font-size: 25px;
+}
+
+span.round-tabs.one{
+    color: rgb(34, 194, 34);border: 2px solid rgb(34, 194, 34);
+}
+
+li.active span.round-tabs.one{
+    background: #fff !important;
+    border: 2px solid #ddd;
+    color: rgb(34, 194, 34);
+}
+
+span.round-tabs.two{
+    color: #febe29;border: 2px solid #febe29;
+}
+
+li.active span.round-tabs.two{
+    background: red !important;
+    border: 2px solid #ddd;
+    color: #febe29;
+}
+
+span.round-tabs.three{
+    color: #3e5e9a;
+    border: 2px solid #3e5e9a;
+}
+
+span.round-tabs.four{
+    color: #f1685e;
+    border: 2px solid #f1685e;
+}
+
+span.round-tabs.five{
+    color: #999;
+    border: 2px solid #999;
+}
+
+li.active span.round-tabs.five{
+    background: #fff !important;
+    border: 2px solid #ddd;
+    color: #999;
+}
+
+.nav-tabs > li.active > a span.round-tabs{
+    background: #fafafa;
+}
+.nav-tabs > li {
+    width: 100%;
+    max-width: 200px;
+}
+li.active:before {
+    content: " ";
+    position: absolute;
+    left: 46%;
+    opacity:0;
+    margin: 0 auto;
+    bottom: -2px;
+    border: 10px solid transparent;
+    border-bottom-color: #fff;
+    z-index: 1;
+    transition:0.2s ease-in-out;
+}
+.nav-tabs > li:after {
+    content: " ";
+    position: absolute;
+    left: 45%;
+   opacity:0;
+    margin: 0 auto;
+    bottom: 0px;
+    border: 5px solid transparent;
+    border-bottom-color: #ff8744;
+    transition:0.1s ease-in-out;
+
+}
+.nav-tabs > li.active:after {
+    content: " ";
+    position: absolute;
+    left: 43%;
+   opacity:1;
+    margin: 0 auto;
+    bottom: 0px;
+    border: 13px solid transparent;
+    border-bottom-color: #ff8744;
+}
+.nav-tabs>li>a:hover {
+  border-color: transparent;
+  background-color: #ff8744;
+}
+.nav-tabs > li a {
+   width: 150px;
+   height: 80px;
+   padding: 15px;
+   margin: 20px auto;
+   padding: 0;
+   background: #ff8744;
+}
+
+.tab-pane{
+   position: relative;
+}
+.tab-content .head{
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 25px;
+    text-transform: uppercase;
+    padding-bottom: 10px;
+}
+.btn-outline-rounded{
+    padding: 10px 40px;
+    margin: 20px 0;
+    border: 2px solid transparent;
+    border-radius: 25px;
+}
+
+.btn.green{
+    background-color:#5cb85c;
+    /*border: 2px solid #5cb85c;*/
+    color: #ffffff;
+}
+
+
+
+@media( max-width : 585px ){
+
+    .board {
+width: 90%;
+height:auto !important;
+}
+    span.round-tabs {
+        font-size:16px;
+width: 50px;
+height: 50px;
+line-height: 50px;
+    }
+    .tab-content .head{
+        font-size:20px;
+        }
+    .nav-tabs > li a {
+width: 50px;
+height: 50px;
+line-height:50px;
+}
+
+.nav-tabs > li.active:after {
+content: " ";
+position: absolute;
+left: 35%;
+}
+
+.btn-outline-rounded {
+    padding:12px 20px;
+    }
+}
+
+/* End Ranking */
